Added some resume content and initial pass at About section

--- a/home-samhaiden/development/index.html
+++ b/home-samhaiden/development/index.html
@@ -110,7 +110,13 @@
 
                     </div>
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Above all I love to learn and build. From an early age I have been facinated with the outdoors, photography, and all things creative - and those passions still remain intact today.
+                    </p>
+                    <br>
+                    <p>Over the years, my skills have increased to include graphic design, web development, and everything it takes to get a business from concept to success. 
+                    </p>
+                    <br>
+                    <p>I have rarely been able to put myself into a box and believe that is my strongest trait. If I don't know it, I will learn it; if it doesn't exist, I will try to build it; if I am told something, I will test it; and I always strive to see things in both detail and in context.
                     </p>
 
                 </div>
