beginning of code page and minor adjustments to css of homepage and resume page

--- a/home-samhaiden/development/index.html
+++ b/home-samhaiden/development/index.html
@@ -139,7 +139,7 @@
         
         <div class="col-one row-one" id="one">
 
-            <a href="https://www.samhaiden.com/travel.php">
+            <a class="one" href="https://www.samhaiden.com/travel.php">
 
                 <i class="fas fa-plane-departure"></i>
 
@@ -151,7 +151,7 @@
 
         <div class="col-two row-one" id="two">
 
-            <a href="https://www.samhaiden.com/resume.php">
+            <a class="two" href="https://www.samhaiden.com/resume.php">
 
                 <i class="far fa-file-alt"></i>
 
@@ -163,7 +163,7 @@
 
         <div class="col-three row-one" id="three">
 
-            <a href="https://www.samhaiden.com/photo.php">
+            <a class="three" href="https://www.samhaiden.com/photo.php">
 
                 <i class="fas fa-bolt"></i>
 
@@ -175,7 +175,7 @@
 
         <div class="col-one row-two" id="four">
 
-            <a href="https://www.samhaiden.com/code.php">
+            <a class="four" href="https://www.samhaiden.com/code.php">
 
                 <i class="fas fa-code"></i>
 
@@ -187,7 +187,7 @@
 
         <div class="col-two row-two" id="five">
 
-            <a href="https://www.samhaiden.com/notes.php">
+            <a class="five" href="https://www.samhaiden.com/notes.php">
 
                 <i class="fas fa-book"></i>
 
@@ -199,7 +199,7 @@
 
         <div class="col-three row-two" id="six">
 
-            <a href="https://www.samhaiden.com/kanban.php">
+            <a class="six" href="https://www.samhaiden.com/kanban.php">
 
                 <i class="far fa-copy"></i>
 
