Minor changes to project links

--- a/home-samhaiden/development/code.html
+++ b/home-samhaiden/development/code.html
@@ -110,7 +110,7 @@
         
         <div class="col-one row-one" id="one">
 
-            <a class="one" href="https://www.samhaiden.com/travel.php">
+            <a class="one" href="https://www.samhaiden.com/guessing-game1/index.html">
 
                 <i class="fas fa-question"></i>
 
@@ -122,7 +122,7 @@
 
         <div class="col-two row-one" id="two">
 
-            <a class="two" href="https://www.samhaiden.com/resume.php">
+            <a class="two" href="https://www.samhaiden.com/projects/weather-scraper.php">
 
                 <i class="far fa-file-alt"></i>
 
@@ -134,7 +134,7 @@
 
         <div class="col-three row-one" id="three">
 
-            <a class="three" href="https://www.samhaiden.com/photo.php">
+            <a class="three" href="https://www.samhaiden.com/projects/clock.php">
 
                 <i class="far fa-clock"></i>
 
@@ -146,7 +146,7 @@
 
         <div class="col-one row-two" id="four">
 
-            <a class="four" href="https://www.samhaiden.com/code.php">
+            <a class="four" href="https://www.samhaiden.com/projects/twitter-feed.php">
 
                 <i class="fab fa-twitter"></i>
 
@@ -158,7 +158,7 @@
 
         <div class="col-two row-two" id="five">
 
-            <a class="five" href="https://www.samhaiden.com/notes.php">
+            <a class="five" href="https://www.samhaiden.com/projects/reaction-test/reaction-test.php">
 
                 <i class="fas fa-stopwatch"></i>
 
@@ -170,7 +170,7 @@
 
         <div class="col-three row-two" id="six">
 
-            <a class="six" href="https://www.samhaiden.com/kanban.php">
+            <a class="six" href="https://www.samhaiden.com/projects/mastermind.php">
 
                 <i class="fas fa-chess-knight"></i>
 
