--- a/home-samhaiden/development/projects/guessing-game2/index.html
+++ b/home-samhaiden/development/projects/guessing-game2/index.html
@@ -5,7 +5,7 @@
 <head>
 
 	<title>Game: How Many Fingers?</title>
-	<link rel="stylesheet" href="styles.css" type="text/css" />
+	<link rel="stylesheet" href="css/styles.css" type="text/css" />
 
 </head>
 
@@ -35,7 +35,7 @@
 
 </div>
 
-<script src="script.js" type="text/javascript"></script>
+<script src="script/script.js" type="text/javascript"></script>
 
 </body>
 
